# JVBot

Data/Bots/: bot1.json  bot1.json~
Data/Bots/copia/: bot1.json
JVBotClient/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  JVAreaSelector.cpp  JVAreaSelector.h  JVBotClient.cpp  JVBotClient.h  JVBotClientUI.cpp  JVBotClientUI.h  JVBotClientUI.ui  JVBotClient_automoc.cpp  JVRenderArea.cpp  JVRenderArea.h  JVViewer.cpp  JVViewer.h  JVViewer.ui  Makefile  cmake_install.cmake  main.cpp  moc_JVBotClient.cpp  moc_JVBotClientUI.cpp  moc_JVRenderArea.cpp  moc_JVViewer.cpp  ui_JVBotClientUI.h  ui_JVViewer.h
JVBotClient/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml  qt-Debug.pro  qt-Release.pro
JVBotClient/nbproject/private/: private.xml
JVBotServer/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  JVANN.cpp  JVANN.h  JVAlgorithm.cpp  JVAlgorithm.h  JVAlgorithmBinarize.cpp  JVAlgorithmBinarize.h  JVAlgorithmBlobs.cpp  JVAlgorithmBlobs.h  JVAlgorithmGrayscale.cpp  JVAlgorithmGrayscale.h  JVAlgorithmResize.cpp  JVAlgorithmResize.h  JVBot.cpp  JVBot.h  JVBotDemo.cpp  JVBotDemo.h  JVBotManager.cpp  JVBotManager.h  JVBotServer.cpp  JVBotServer.h  JVBotServerUI.cpp  JVBotServerUI.h  JVBotServerUI.ui  JVBotServer_automoc.cpp  JVDataDetected.cpp  JVDataDetected.h  JVImage.cpp  JVImage.h  JVImageManager.cpp  JVImageManager.h  JVImageProcessor.cpp  JVImageProcessor.h  JVImageScanner.cpp  JVImageScanner.h  JVInputGenerator.cpp  JVInputGenerator.h  (+26 more)
JVBotServer/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml  qt-Debug.mk  qt-Debug.pro  qt-Release.pro
JVBotServer/nbproject/private/: private.xml
